# satgapfillr

./: README.md  pyproject.toml  test.nc
examples/: U-Net_xbatcher_workflow.ipynb
satgapfillr/: __init__.py  evaluation.py  gapfill.py  io.py  metrics.py  model.py  preprocessing.py  simulate.py
satgapfillr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py
