[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satgapfillr"
version = "0.1.0"
description = "Gap-filling UNet model for remote sensing data"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "Apache-2.0"}
dependencies = ["xarray", "tensorflow", "xbatcher", "zarr", "fsspec", "scikit-learn"]
